# ApartiumChat

./: CMakeLists.txt  Makefile  README.md  client  server
client/: Client.cpp  Client.h  client.cpp
server/: Server.h  server.cpp
tcp_client/: Client.cpp  Client.h  client.cpp  main.cpp
tcp_server/: Server.cpp  Server.h  ServerConstants.h  ServerManager.cpp  ServerManager.h  ThreadPool.cpp  ThreadPool.h  main.cpp  server.cpp  server_properties.json
tcp_server/utils/: ServerUtils.cpp  ServerUtils.h
utils/: Logger.cpp  Logger.h  NetworkUtils.cpp  NetworkUtils.h  SocketAdapter.h
